# prism

./: .gitignore  Makefile  README.md  cli.py  constants.py  prism.py  prism.spec  pyproject.toml  requirements.txt  run.py  shamir.py
.github/: build_executables.yml  copilot-instructions.md
.github/workflows/: build_executables.yml  release.yml
prism/: constants.py  prism.py  shamir.py
